Estructurando parte dos

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link" href="#">¿Quien soy?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#">Proyectos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#">Contactarse</a>
                     </li>
 
                 </ul>
@@ -49,12 +49,13 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    CONSTRUCCIONES <br> DIVERSAS
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    PROFESIONAL EGRESADA DE LA PONTIFICIA UNIVERSIDAD CATOLICA, QUE TRABAJA CON EL MAYOR CUIDADO DE ACUERDO A LAS LEYES DEL SECTOR.
+                    PARTICIPACION EN PROYECTOS CON CARACTERISTICAS SUSTENTANBLES Y CERTIFICACION LEED.
+                    TRABAJO PRINCIPALMENTE DE OFICINA TECNICA.
+        
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
