--- a/index.html
+++ b/index.html
@@ -111,14 +111,13 @@
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/Centro-de-Distribucion-ICB-Food-Service-1.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">ICB food service</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Proyecto contruido el año 2020, en Quilicura.
+                            Se desarrolló duran pandemia y solo con 100 trabajadores, sin embargo la logistica de materiales 
+                            y programacion permitió que se completara en el fecha de contrato.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -128,14 +127,12 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/Direccion\ de\ inclusion.png)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Direccion de Inclusion UC</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Proyecto construido el año 2021, en Campus San Joaquin de la Pontificia Universidad Catolica de Chile.
+                            Se desarrollo port pandemia, por lo que aumento la dotacion de trabajadores lo que ayudó a la logistica y programacion.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -145,14 +142,13 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/Colegio\ Huinganal.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Colegio Huinganal</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Proyecto contruido en 2022 en Lo Barnecha , Santiago de Chile.
+                            Fue contruido en una zona apartade de Santiago por lo tanto la dotacion era pequeña, pero la logistica
+                            y la programacion de las compras permitieron terminarlo en la fecha acordada.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
